--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ async-timeout==4.0.3
 attrs==23.1.0
 bcrypt==4.0.1
 blinker==1.6.2
+cachelib==0.10.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.7
@@ -13,6 +14,7 @@ dataclasses-json==0.6.1
 dnspython==2.4.2
 Flask==2.3.3
 Flask-Login==0.6.2
+Flask-Session==0.5.0
 frozenlist==1.4.0
 idna==3.4
 itsdangerous==2.1.2
