--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
-aiohttp==3.8.5
+aiohttp==3.8.6
 aiosignal==1.3.1
-annotated-types==0.5.0
+annotated-types==0.6.0
 anyio==3.7.1
 async-timeout==4.0.3
 attrs==23.1.0
 bcrypt==4.0.1
-blinker==1.6.2
+blinker==1.6.3
+cachelib==0.10.2
 certifi==2023.7.22
-charset-normalizer==3.2.0
+charset-normalizer==3.3.1
 click==8.1.7
 dataclasses-json==0.6.1
 dnspython==2.4.2
-Flask==2.3.3
-Flask-Login==0.6.2
+Flask==3.0.0
+Flask-Login==0.6.3
 Flask-Session==0.5.0
 frozenlist==1.4.0
 idna==3.4
@@ -20,36 +21,34 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 jsonpatch==1.33
 jsonpointer==2.4
-langchain==0.0.304
-langsmith==0.0.41
+langchain==0.0.327
+langsmith==0.0.54
 loguru==0.7.2
 MarkupSafe==2.1.3
 marshmallow==3.20.1
 multidict==6.0.4
 mypy-extensions==1.0.0
-numexpr==2.8.7
-numpy==1.26.0
+numpy==1.26.1
 openai==0.28.1
-packaging==23.1
+packaging==23.2
 pinecone-client==2.2.4
-pip-check-reqs==2.5.3
-psycopg2==2.9.8
+psycopg2==2.9.9
 pydantic==2.4.2
 pydantic_core==2.10.1
 PyPDF2==3.0.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 PyYAML==6.0.1
-regex==2023.8.8
+regex==2023.10.3
 requests==2.31.0
 six==1.16.0
 sniffio==1.3.0
-SQLAlchemy==2.0.21
+SQLAlchemy==2.0.22
 tenacity==8.2.3
 tiktoken==0.5.1
 tqdm==4.66.1
 typing-inspect==0.9.0
 typing_extensions==4.8.0
-urllib3==2.0.5
-Werkzeug==2.3.7
+urllib3==2.0.7
+Werkzeug==3.0.1
 yarl==1.9.2
