--- a/requirements.txt
+++ b/requirements.txt
@@ -5,50 +5,76 @@ anyio==3.7.1
 async-timeout==4.0.3
 attrs==23.1.0
 bcrypt==4.0.1
-blinker==1.6.3
+beautifulsoup4==4.12.2
+blinker==1.7.0
 cachelib==0.10.2
 certifi==2023.7.22
-charset-normalizer==3.3.1
+charset-normalizer==3.3.2
 click==8.1.7
-dataclasses-json==0.6.1
+contourpy==1.1.1
+cycler==0.12.0
+dataclasses-json==0.6.2
+distro==1.8.0
 dnspython==2.4.2
+docx2txt==0.8
+et-xmlfile==1.1.0
 Flask==3.0.0
+Flask-Cors==4.0.0
 Flask-Login==0.6.3
 Flask-Session==0.5.0
+fonttools==4.43.0
 frozenlist==1.4.0
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.25.1
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+joblib==1.3.2
 jsonpatch==1.33
 jsonpointer==2.4
-langchain==0.0.327
-langsmith==0.0.54
+kiwisolver==1.4.5
+langchain==0.0.335
+langsmith==0.0.64
 loguru==0.7.2
+lxml==4.9.3
 MarkupSafe==2.1.3
 marshmallow==3.20.1
+matplotlib==3.8.0
 multidict==6.0.4
 mypy-extensions==1.0.0
-numpy==1.26.1
-openai==0.28.1
+numpy==1.26.0
+openai==1.2.4
+openpyxl==3.1.2
 packaging==23.2
+pandas==2.1.1
+Pillow==10.0.1
 pinecone-client==2.2.4
 psycopg2==2.9.9
-pydantic==2.4.2
-pydantic_core==2.10.1
+pydantic==2.5.0
+pydantic_core==2.14.1
+pyparsing==3.1.1
 PyPDF2==3.0.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2023.3.post1
 PyYAML==6.0.1
 regex==2023.10.3
 requests==2.31.0
+scikit-learn==1.3.2
+scipy==1.11.3
+seaborn==0.13.0
 six==1.16.0
 sniffio==1.3.0
-SQLAlchemy==2.0.22
+soupsieve==2.5
+SQLAlchemy==2.0.23
 tenacity==8.2.3
+threadpoolctl==3.2.0
 tiktoken==0.5.1
 tqdm==4.66.1
 typing-inspect==0.9.0
 typing_extensions==4.8.0
-urllib3==2.0.7
+tzdata==2023.3
+urllib3==2.1.0
 Werkzeug==3.0.1
 yarl==1.9.2
