--- a/requirements.txt
+++ b/requirements.txt
@@ -1,220 +1,80 @@
-aiofiles==23.1.0
-aiohttp==3.8.4
+aiohttp==3.8.6
 aiosignal==1.3.1
-altair==5.0.1
-amqp==5.1.1
-anyio==3.7.0
-appdirs==1.4.4
-appnope==0.1.3
-asttokens==2.4.1
-async-timeout==4.0.2
+annotated-types==0.6.0
+anyio==3.7.1
+async-timeout==4.0.3
 attrs==23.1.0
-autopep8==2.0.1
-backoff==2.2.1
 bcrypt==4.0.1
 beautifulsoup4==4.12.2
-billiard==4.1.0
-blinker==1.6.2
-boilerpy3==1.0.6
+blinker==1.7.0
 cachelib==0.10.2
-cachetools==5.3.1
-canals==0.3.2
-cattrs==23.1.2
-celery==5.3.4
-certifi==2023.5.7
-chardet==5.2.0
-charset-normalizer==3.1.0
-click==8.1.3
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.3.0
-comm==0.2.0
-contextlib2==21.6.0
-contourpy==1.1.0
-cssselect==1.2.0
-cycler==0.11.0
-dataclasses-json==0.5.8
-datasets==2.13.1
-debugpy==1.8.0
-decorator==5.1.1
-dill==0.3.6
-dnspython==2.3.0
-docopt==0.6.2
+certifi==2023.7.22
+charset-normalizer==3.3.2
+click==8.1.7
+contourpy==1.1.1
+cycler==0.12.0
+dataclasses-json==0.6.2
+distro==1.8.0
+dnspython==2.4.2
 docx2txt==0.8
 et-xmlfile==1.1.0
-Events==0.4
-executing==2.0.1
-faiss-cpu==1.7.4
-farm-haystack==1.19.0
-fastapi==0.98.0
-ffmpy==0.3.0
-filelock==3.12.2
-Flask==2.3.3
-Flask-Login==0.6.2
+Flask==3.0.0
+Flask-Login==0.6.3
 Flask-Session==0.5.0
-fonttools==4.40.0
-frozenlist==1.3.3
-fsspec==2023.6.0
-gitdb==4.0.10
-GitPython==3.1.31
-gpt-index==0.6.32
-gradio==3.35.2
-gradio_client==0.2.7
-graphviz==0.20.1
-greenlet==2.0.2
-grpcio==1.56.2
-grpcio-tools==1.56.2
+fonttools==4.43.0
+frozenlist==1.4.0
 h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
-htmltemplate==2.2.1
-httpcore==0.17.2
-httpx==0.24.1
-hugchat==0.2.0
-huggingface-hub==0.15.1
-hyperframe==6.0.1
+httpcore==1.0.2
+httpx==0.25.1
 idna==3.4
-importlib-metadata==6.7.0
-inflect==7.0.0
 install==1.3.5
-InstructorEmbedding==1.0.1
-ipykernel==6.27.1
-ipython==8.18.1
 itsdangerous==2.1.2
-jedi==0.19.1
 Jinja2==3.1.2
-joblib==1.2.0
-jsonschema==4.17.3
-jupyter_client==8.6.0
-jupyter_core==5.5.0
-kiwisolver==1.4.4
-kombu==5.3.2
-langchain==0.0.247
-langchainplus-sdk==0.0.17
-langsmith==0.0.11
-lazy-imports==0.3.1
-linkify-it-py==2.0.2
-llama-index==0.6.32
-loguru==0.7.0
+joblib==1.3.2
+jsonpatch==1.33
+jsonpointer==2.4
+kiwisolver==1.4.5
+langchain==0.0.335
+langsmith==0.0.64
+loguru==0.7.2
 lxml==4.9.3
-markdown-it-py==2.2.0
 MarkupSafe==2.1.3
-marshmallow==3.19.0
-marshmallow-enum==1.5.1
-matplotlib==3.7.1
-matplotlib-inline==0.1.6
-mdit-py-plugins==0.3.3
-mdurl==0.1.2
-monotonic==1.6
-more-itertools==10.0.0
-mpmath==1.3.0
+marshmallow==3.20.1
+matplotlib==3.8.0
 multidict==6.0.4
-multiprocess==0.70.14
 mypy-extensions==1.0.0
-nest-asyncio==1.5.8
-networkx==3.1
-nltk==3.8.1
-num2words==0.5.12
-numexpr==2.8.4
-numpy==1.24.1
-openai==0.27.8
-openapi-schema-pydantic==1.2.4
+numpy==1.26.0
+openai==1.2.4
 openpyxl==3.1.2
-orjson==3.9.1
-packaging==23.1
-pandas==1.5.3
-parso==0.8.3
-pexpect==4.9.0
-Pillow==9.5.0
-pinecone-client==2.2.2
-platformdirs==3.10.0
-portalocker==2.7.0
-posthog==3.0.1
-prompt-toolkit==3.0.41
-prompthub-py==4.0.0
-protobuf==4.23.3
-psutil==5.9.6
-psycopg2-binary==2.9.7
-ptyprocess==0.7.0
-pure-eval==0.2.2
-py==1.11.0
-pyarrow==12.0.1
-pycodestyle==2.10.0
-pycryptodome==3.18.0
-pydantic==1.10.9
-pydeck==0.8.1b0
-pydub==0.25.1
-Pygments==2.15.1
-pymongo==4.5.0
-Pympler==1.0.1
-pyparsing==3.1.0
-pypdf==3.11.0
+packaging==23.2
+pandas==2.1.1
+Pillow==10.0.1
+pinecone-client==2.2.4
+psycopg2==2.9.9
+pydantic==2.5.0
+pydantic_core==2.14.1
+pyparsing==3.1.1
 PyPDF2==3.0.1
-pyquery==2.0.0
-pyrsistent==0.19.3
 python-dateutil==2.8.2
-python-docx==0.8.11
 python-dotenv==1.0.0
-python-multipart==0.0.6
-pytz==2022.7.1
-pytz-deprecation-shim==0.1.0.post0
-PyYAML==6.0
-pyzmq==25.1.1
-qdrant-client==1.3.1
-quantulum3==0.9.0
-rank-bm25==0.2.2
-regex==2023.6.3
+pytz==2023.3.post1
+PyYAML==6.0.1
+regex==2023.10.3
 requests==2.31.0
-requests-cache==0.9.8
-requests-toolbelt==1.0.0
-retry==0.9.2
-rich==13.4.2
-safetensors==0.3.1
-schema==0.7.5
-scikit-learn==1.3.0
-scipy==1.10.0
+scikit-learn==1.3.2
+scipy==1.11.3
 seaborn==0.13.0
-semantic-version==2.10.0
-sentence-transformers==2.2.2
-sentencepiece==0.1.99
 six==1.16.0
-smmap==5.0.0
 sniffio==1.3.0
-soupsieve==2.4.1
-sportsreference==0.5.2
-SQLAlchemy==2.0.17
-sseclient-py==1.7.2
-stack-data==0.6.3
-starlette==0.27.0
-streamlit==1.23.1
-sympy==1.12
-tenacity==8.2.2
-TextLoader==0.0.9
-threadpoolctl==3.1.0
-tiktoken==0.4.0
-tokenizers==0.13.3
-toml==0.10.2
-toolz==0.12.0
-torch==2.0.1
-torchvision==0.15.2
-tornado==6.3.2
-tqdm==4.65.0
-traitlets==5.14.0
-transformers==4.31.0
-typing-inspect==0.8.0
-typing_extensions==4.5.0
+soupsieve==2.5
+SQLAlchemy==2.0.23
+tenacity==8.2.3
+threadpoolctl==3.2.0
+tiktoken==0.5.1
+tqdm==4.66.1
+typing-inspect==0.9.0
+typing_extensions==4.8.0
 tzdata==2023.3
-tzlocal==4.3.1
-uc-micro-py==1.0.2
-url-normalize==1.4.3
-urllib3==1.26.16
-uvicorn==0.22.0
-validators==0.20.0
-vine==5.0.0
-watchdog==3.0.0
-wcwidth==0.2.6
-websockets==11.0.3
-Werkzeug==2.3.7
-xxhash==3.2.0
+urllib3==2.1.0
+Werkzeug==3.0.1
 yarl==1.9.2
-zipp==3.15.0
