Fix data variable initialization in analytics function and update Flask-Mail version

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ docx2txt==0.8
 et-xmlfile==1.1.0
 Flask==3.0.0
 Flask-Login==0.6.3
+Flask-Mail==0.9.1
 Flask-Session==0.5.0
 fonttools==4.43.0
 frozenlist==1.4.0
