--- a/requirements.txt
+++ b/requirements.txt
@@ -35,8 +35,12 @@ joblib==1.3.2
 jsonpatch==1.33
 jsonpointer==2.4
 kiwisolver==1.4.5
-langchain==0.0.335
-langsmith==0.0.64
+langchain==0.1.6
+langchain-community==0.0.19
+langchain-core==0.1.22
+langchain-openai==0.0.5
+langchain-pinecone==0.0.2
+langsmith==0.0.87
 loguru==0.7.2
 lxml==4.9.3
 MarkupSafe==2.1.3
@@ -45,7 +49,7 @@ matplotlib==3.8.0
 multidict==6.0.4
 mypy-extensions==1.0.0
 numpy==1.26.0
-openai==1.2.4
+openai==1.10.0
 openpyxl==3.1.2
 packaging==23.2
 pandas==2.1.1
@@ -71,7 +75,7 @@ soupsieve==2.5
 SQLAlchemy==2.0.23
 tenacity==8.2.3
 threadpoolctl==3.2.0
-tiktoken==0.5.1
+tiktoken==0.5.2
 tqdm==4.66.1
 typing-inspect==0.9.0
 typing_extensions==4.8.0
