--- a/requirements.txt
+++ b/requirements.txt
@@ -1,85 +1,70 @@
-aiohttp==3.8.6
+aiohttp==3.9.3
 aiosignal==1.3.1
 annotated-types==0.6.0
-anyio==3.7.1
-async-timeout==4.0.3
-attrs==23.1.0
-bcrypt==4.0.1
-beautifulsoup4==4.12.2
+anyio==4.2.0
+attrs==23.2.0
+bcrypt==4.1.2
+beautifulsoup4==4.12.3
 blinker==1.7.0
-cachelib==0.10.2
-certifi==2023.7.22
+cachelib==0.12.0
+certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
-contourpy==1.1.1
-cycler==0.12.0
-dataclasses-json==0.6.2
-distro==1.8.0
-dnspython==2.4.2
+dataclasses-json==0.6.4
+distro==1.9.0
 docx2txt==0.8
-et-xmlfile==1.1.0
-Flask==3.0.0
+Flask==3.0.2
 Flask-Login==0.6.3
 Flask-Mail==0.9.1
-Flask-Session==0.5.0
-fonttools==4.43.0
-frozenlist==1.4.0
+Flask-Session==0.6.0
+frozenlist==1.4.1
 h11==0.14.0
-httpcore==1.0.2
-httpx==0.25.1
-idna==3.4
-install==1.3.5
+httpcore==1.0.3
+httpx==0.26.0
+idna==3.6
 itsdangerous==2.1.2
-Jinja2==3.1.2
+Jinja2==3.1.3
 joblib==1.3.2
 jsonpatch==1.33
 jsonpointer==2.4
-kiwisolver==1.4.5
-langchain==0.1.6
-langchain-community==0.0.19
-langchain-core==0.1.22
-langchain-openai==0.0.5
+langchain==0.1.7
+langchain-community==0.0.20
+langchain-core==0.1.23
+langchain-openai==0.0.6
 langchain-pinecone==0.0.2
 langsmith==0.0.87
-loguru==0.7.2
-lxml==4.9.3
-MarkupSafe==2.1.3
-marshmallow==3.20.1
-matplotlib==3.8.0
-multidict==6.0.4
+MarkupSafe==2.1.5
+marshmallow==3.20.2
+multidict==6.0.5
 mypy-extensions==1.0.0
-numpy==1.26.0
-openai==1.10.0
-openpyxl==3.1.2
+numpy==1.26.4
+openai==1.12.0
 packaging==23.2
-pandas==2.1.1
-Pillow==10.0.1
+pandas==2.2.0
 pinecone-client==3.0.3
-psycopg2==2.9.9
-pydantic==2.5.0
-pydantic_core==2.14.1
-pyparsing==3.1.1
+psycopg2-binary==2.9.9
+pydantic==2.6.1
+pydantic_core==2.16.2
 PyPDF2==3.0.1
 python-dateutil==2.8.2
-python-dotenv==1.0.0
-pytz==2023.3.post1
+python-dotenv==1.0.1
+pytz==2024.1
 PyYAML==6.0.1
-regex==2023.10.3
+regex==2023.12.25
 requests==2.31.0
-scikit-learn==1.3.2
-scipy==1.11.3
-seaborn==0.13.0
+scikit-learn==1.4.1.post1
+scipy==1.12.0
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
-SQLAlchemy==2.0.23
+SQLAlchemy==2.0.27
 tenacity==8.2.3
-threadpoolctl==3.2.0
-tiktoken==0.5.2
-tqdm==4.66.1
+threadpoolctl==3.3.0
+tiktoken==0.6.0
+tqdm==4.66.2
 typing-inspect==0.9.0
-typing_extensions==4.8.0
-tzdata==2023.3
-urllib3==2.1.0
+typing_extensions==4.9.0
+tzdata==2024.1
+urllib3==2.2.0
 Werkzeug==3.0.1
-yarl==1.9.2
+yarl==1.9.4
