--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,17 @@ aiosignal==1.3.1
 annotated-types==0.6.0
 anyio==4.2.0
 attrs==23.2.0
+azure-core==1.30.0
+azure-storage-blob==12.19.0
 bcrypt==4.1.2
 beautifulsoup4==4.12.3
 blinker==1.7.0
 cachelib==0.12.0
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
+cryptography==42.0.5
 dataclasses-json==0.6.4
 distro==1.9.0
 docx2txt==0.8
@@ -22,6 +26,7 @@ h11==0.14.0
 httpcore==1.0.3
 httpx==0.26.0
 idna==3.6
+isodate==0.6.1
 itsdangerous==2.1.2
 Jinja2==3.1.3
 joblib==1.3.2
@@ -43,6 +48,7 @@ packaging==23.2
 pandas==2.2.0
 pinecone-client==3.0.3
 psycopg2-binary==2.9.9
+pycparser==2.21
 pydantic==2.6.1
 pydantic_core==2.16.2
 PyPDF2==3.0.1
