--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,7 @@ six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
 SQLAlchemy==2.0.27
+stripe==8.5.0
 tenacity==8.2.3
 threadpoolctl==3.3.0
 tiktoken==0.6.0
