--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohttp==3.9.3
 gunicorn==20.1.0
 aiosignal==1.3.1
+amqp==5.2.0
 annotated-types==0.6.0
 anyio==4.2.0
 attrs==23.2.0
@@ -8,12 +9,16 @@ azure-core==1.30.0
 azure-storage-blob==12.19.0
 bcrypt==4.1.2
 beautifulsoup4==4.12.3
+billiard==4.2.0
 blinker==1.7.0
 cachelib==0.12.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 cryptography==42.0.5
 dataclasses-json==0.6.4
 distro==1.9.0
@@ -33,6 +38,7 @@ Jinja2==3.1.3
 joblib==1.3.2
 jsonpatch==1.33
 jsonpointer==2.4
+kombu==5.3.7
 langchain==0.1.7
 langchain-community==0.0.20
 langchain-core==0.1.23
@@ -48,6 +54,7 @@ openai==1.12.0
 packaging==23.2
 pandas==2.2.0
 pinecone-client==3.0.3
+prompt_toolkit==3.0.46
 psycopg2-binary==2.9.9
 pycparser==2.21
 pydantic==2.6.1
@@ -62,6 +69,7 @@ requests==2.31.0
 scikit-learn==1.4.1.post1
 scipy==1.12.0
 six==1.16.0
+smart-open==7.0.4
 sniffio==1.3.0
 soupsieve==2.5
 SQLAlchemy==2.0.27
@@ -74,5 +82,8 @@ typing-inspect==0.9.0
 typing_extensions==4.9.0
 tzdata==2024.1
 urllib3==2.2.0
+vine==5.1.0
+wcwidth==0.2.13
 Werkzeug==3.0.1
+wrapt==1.16.0
 yarl==1.9.4
