--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,7 @@ python-dateutil==2.8.2
 python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
+redis==5.0.6
 regex==2023.12.25
 requests==2.31.0
 scikit-learn==1.4.1.post1
